# Processor-Simulator

./: .gitignore  Readme.md  aca-processor-simulator.cabal  cabal.sandbox.config  isa_reference.md  isa_reference.txt  readme.txt
.cabal-sandbox/x86_64-linux-ghc-7.8.4-packages.conf.d/: StateVar-1.1.0.4-82e93c0b966763f7f2103858fb970efd.conf  adjunctions-4.3-1130e9a22408dbd46c8b3344246d0ff0.conf  base-orphans-0.5.4-ea3c197ca9ef7e01a4fa3e623cff0bf5.conf  bifunctors-5.4.1-57fa7c5aa62ca3e7d5226ea3b4f2991b.conf  comonad-5-77f723d9e6d489d20c2e8481de5f7b76.conf  contravariant-1.4-ea2cf6e1457b7ae294708d9c29ccc500.conf  distributive-0.5.0.2-403e6316f34e4405f83eb8de7b0bd9a5.conf  exceptions-0.8.3-b42869aa0a50d8c7a383393922a98090.conf  free-4.12.4-34cfb487236cd320a24f917bf377efa1.conf  generic-deriving-1.11.1-d08f54397e8baa382f86ae30095ffb06.conf  kan-extensions-5.0.1-a1203c1e8d8e1f1a35976c1562876441.conf  lens-4.15.1-a1abf9165610f95b9623c4ff5be315d1.conf  nats-1.1.1-3ec14412f18b9d503079c982742eee34.conf  package.cache  prelude-extras-0.4.0.3-e45be0893aa497fc23b5747ef506faae.conf  profunctors-5.2-a4cf080173a528bf6f8f9ca05bf5dd38.conf  reflection-2.1.2-aadbd062b12561d05d5cc1fdf3f3801b.conf  semigroupoids-5.1-d02570393a5d5062303fdf9e26032a12.conf  semigroups-0.18.2-a45a18c2ca5586487a51b8dd1dfe606c.conf  tagged-0.8.5-36018b0e44202fc604fe19220f00c90b.conf  transformers-compat-0.5.1.4-e51673b774aab099f54f5eed42d8017f.conf  void-0.7.1-d1da5433bbcda8a07fd0770fd3e50c14.conf
assembler/: Assembler.cabal  ChangeLog.md  LICENSE  assembler.cabal
assembler/src/: Assembler.hs  Main.hs
benchmarks/: bubble_sort.asm  bubble_sort.cmm  factorial.cmm  gcd.asm  gcd.cmm  hamming.asm  hamming.c.asm  hamming.cmm  quick_sort.cmm
benchmarks/asm/: 16t_16f.asm  2t_2f.asm  32t_32f.asm  4t_4f.asm  64t_64f.asm  8t_8f.asm  alternating.asm  always_not_taken.asm  always_taken.asm  bubble_sort.asm  factorial.asm  gcd.asm  hamming.asm  quick_sort.asm  tight_branch_loop.asm  tight_branch_stalled_loop.asm  tight_loop.asm
benchmarks/cmm/: hamming.cmm  quick_sort.cmm  recursive_gcd.cmm
benchmarks/compiled/: gcd.asm  recursive_gcd.asm
compiler/: Assembler.hs  Instruction.hs  Readme.md  compiler.cabal  test.asm
compiler/src/: Assembler.hs  Interpreter.hs  Main.hs
simulator/: ChangeLog.md  Readme.md  Specs.md  cabal.sandbox.config  simulator.cabal
simulator/src/: Main.hs
src/: Assembler.hs  Compiler.hs  Main.hs  Simulator.hs
src/Assembler/: Assembler.hs  Instruction.hs  Parser.hs
src/Compiler/: Allocator.hs  Analyser.hs  Generator.hs  GeneratorState.hs  Instruction.hs  Parser.hs  SyntaxTree.hs
src/Simulator/: CmdParser.hs  Simulator.hs
tests/asm/: arr_ass.asm  for_loop.asm  func_call.asm  if_stmt.asm  var_ass.asm
tests/cmm/: arr_ass.cmm  array_arg.asm  array_arg.cmm  for_loop.cmm  func_call.asm  func_call.cmm  if_statement.asm  if_statement.cmm  if_stmt.cmm  loop.asm  loop.cmm  var_ass.cmm  variable_assignment.asm  variable_assignment.cmm
(+542 files in other folders)
