name:                aca-processor-simulator
version:             0.1.0.0
description:         Please see Readme.md
homepage:            https://bitbucket.org/Lostcomb/aca-processor-simulator/src
license:             BSD3
license-file:        LICENSE
author:              Julian Loscombe
maintainer:          jl14910@my.bristol.ac.uk
copyright:           2016 Julian Loscombe
build-type:          Simple
cabal-version:       >=1.10

executable aca-processor-simulator
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Assembler,
                       Assembler.Assembler,
                       Assembler.Instruction,
                       Assembler.Parser,
                       Compiler,
                       Compiler.Allocator,
                       Compiler.Analyser,
                       Compiler.Generator,
                       Compiler.GeneratorState,
                       Compiler.Instruction,
                       Compiler.Parser,
                       Compiler.SyntaxTree,
                       Simulator,
                       Simulator.CmdParser,
                       Simulator.Simulator,
                       Simulator.Data.Instruction,
                       Simulator.Data.Processor,
                       Simulator.Data.Registers,
                       Simulator.Data.Simdata,
                       Simulator.Data.Stage.Decode,
                       Simulator.Data.Stage.Execute,
                       Simulator.Data.Stage.Fetch,
                       Simulator.Data.Stage.Issue,
                       Simulator.Data.Stage.Writeback,
                       Simulator.Control.Stage.Decode,
                       Simulator.Control.Stage.Execute,
                       Simulator.Control.Stage.Fetch,
                       Simulator.Control.Stage.Issue,
                       Simulator.Control.Stage.Writeback
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       lens,
                       containers,
                       mtl,
                       parsec,
                       filepath,
                       bytestring
